# nfo-gen

./: .gitignore  README.md  pyproject.toml  tvshows.csv
src/: ansicolor.py
src/nfo_gen/: __main__.py  gsheet_handler.py  read_gsheet.py
templates/: tvshow.nfo  tvshow2.nfo
tests/data/video/LearnFoo/: tvshow.nfo
